# fastapi-lms

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 191852c82ed6_added_modules.py  8be7b367e09a_.py  9c1c23fbcbe4_add_cascade_on_delete.py  f564287fcc02_moving_is_active_to_users_table.py
api/: courses.py  modules.py  sections.py  users.py
api/utils/: courses.py  modules.py  users.py
db/: db_setup.py
db/models/: .py  course.py  module.py  user.py
pydantic_schemas/: course.py  module.py  user.py
