[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["Andrei Netotea <andrei.netotea@openenergi.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.40.0"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
